# Music-Member-Recommender

./: .gitignore  README.md  pyproject.toml
app/: main.py  recommender.py  schemas.py
app/data/: users.csv
tests/: test_main.py  test_recommender.py
